--- a/utils/.env
+++ b/utils/.env
@@ -1,3 +1,7 @@
-MONGO_URI=mongodb+srv://dharat:dzignuts@cluster0.nzwwnye.mongodb.net/learn
+MONGO_URI=mongodb+srv://dhara:dharathakkar@cluster0.3tfvk.mongodb.net/users?retryWrites=true&w=majority
+
 
 JWT_SECRETE_KEY=dharathakkarzignutsinternship
+
+EMAIL_USER=dhara.ineinfotech@gmail.com
+EMAIL_PASS="pthn cyen eydq alnu"
