--- a/utils/.env
+++ b/utils/.env
@@ -3,5 +3,5 @@ MONGO_URI=mongodb+srv://dhara:dharathakkar@cluster0.3tfvk.mongodb.net/users?retr
 
 JWT_SECRETE_KEY=dharathakkarzignutsinternship
 
-EMAIL_USER=dhara.ineinfotech@gmail.com
-EMAIL_PASS="pthn cyen eydq alnu"
+EMAIL_USER=jay@ineinfotech.com
+EMAIL_PASS="lzxx avbg bjzy yvwz"
