--- a/utils/.env
+++ b/utils/.env
@@ -5,3 +5,6 @@ JWT_SECRETE_KEY=dharathakkarzignutsinternship
 
 EMAIL_USER=jay@ineinfotech.com
 EMAIL_PASS="lzxx avbg bjzy yvwz"
+
+# EMAIL_USER=dhara.ineinfotech@gmail.com
+# EMAIL_PASS="pthn cyen eydq alnu"
